# advanced_cpp_exercises

./: .gitignore  CMakeLists.txt
log_ptr/: CMakeLists.txt
log_ptr/log_ptr_osa_1/: CMakeLists.txt  Log_Ptr.h  main.cpp
log_ptr/log_ptr_osa_2/: CMakeLists.txt  Log_Ptr.h  main.cpp
log_ptr/log_ptr_osa_3/: CMakeLists.txt  Log_Ptr.h  main.cpp
log_ptr/log_ptr_osa_4/: CMakeLists.txt  Log_Ptr.h  main.cpp
tehtava1/: CMakeLists.txt
tehtava1/1/: CMakeLists.txt  main.cpp
tehtava1/2/: CMakeLists.txt  main.cpp
tehtava1/3/: CMakeLists.txt  Draw_Map.cpp  Update_Items.cpp  Update_Players.cpp  main.cpp
tehtava1/3/include/: Game_Task.h  Update_Items.h
tehtava2/: CMakeLists.txt
tehtava2/1/: CMakeLists.txt  main.cpp
tehtava2/2/: CMakeLists.txt  main.cpp
tehtava2/3/: CMakeLists.txt  Draw_Map.cpp  Update_Items.cpp  Update_Players.cpp  main.cpp
tehtava2/miniprojekti_1/: CMakeLists.txt  Draw_Map.cpp  TaskQueue.cpp  Update_Items.cpp  Update_Players.cpp  main.cpp
tehtava2/miniprojekti_1/include/: Draw_Map.h  TaskQueue.h  Update_Players.h
tunti_esimerkit/: CMakeLists.txt  tikkupeli.cpp
viikko4/: CMakeLists.txt
viikko4/teht12/: CMakeLists.txt  main.cpp
viikko4/teht13/: CMakeLists.txt  main.cpp
viikko4/teht14/: Big_Data.h  CMakeLists.txt  main.cpp
viikko4/teht15/: Big_Data.h  CMakeLists.txt  main.cpp
viikko4/teht16/: CMakeLists.txt  main.cpp
viikko4/teht17/: CMakeLists.txt  vastaus.txt
viikko5/: CMakeLists.txt
viikko5/kirjastot/: CMakeLists.txt  main.cpp
viikko5/miniprojekti3/: CMakeLists.txt
viikko5/miniprojekti3/taso1/: CMakeLists.txt  straight.c
(+4 files in other folders)
